<resources>
    <string name="app_name">CConfs</string>
    <string name="preference_file_key">pf_key</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_agenda">AgendaActivity</string>
    <string name="title_activity_main_activity">MainActivity</string>
    <string name="dialog_message_item_pinned">Item pinned! (position = %1$d)</string>
    <string name="dialog_message_group_item_pinned">Group item pinned! (group = %1$d)</string>
    <string name="dialog_message_child_item_pinned">Child item pinned! (group = %1$d, child = %2$d)</string>
    <string name="snack_bar_text_item_removed">1 item removed</string>
    <string name="snack_bar_text_group_item_removed">1 group item removed</string>
    <string name="snack_bar_text_child_item_removed">1 child item removed</string>
    <string name="snack_bar_text_button_clicked">Button clicked! (position = %1$d)</string>
    <string name="snack_bar_action_undo">UNDO</string>
    <string name="title_activity_session">SessionActivity</string>
    <string name="sticky_header">Sticky</string>
    <string name="lipsum">
    Lorem ipsum dolor sit amet, ut duis lorem provident sed felis blandit,
    condimentum donec lectus ipsum et mauris, morbi porttitor interdum feugiat nulla donec sodales,
    vestibulum nisl primis a molestie vestibulum quam, sapien mauris metus risus suspendisse magnis.
    Augue viverra nulla faucibus egestas eu, a etiam id congue rutrum ante, arcu tincidunt donec
    quam felis at ornare, iaculis ligula sodales venenatis commodo volutpat neque, suspendisse elit
    praesent tellus felis mi amet. Inceptos amet tempor lectus lorem est non, ac donec ac libero
    neque mauris, tellus ante metus eget leo consequat. Scelerisque dolor curabitur pretium blandit
    ut feugiat, amet lacus pulvinar justo convallis ut, sed natoque ipsum urna posuere nibh eu. Sed
    at sed vulputate sit orci, facilisis a aliquam tellus quam aliquam, eu aliquam donec at molestie
    ante, pellentesque mauris lorem ultrices libero faucibus porta, imperdiet adipiscing sit hac
    diam ut nulla. Lacus enim elit pulvinar donec vehicula dapibus, accumsan purus officia cursus
    dolor sapien, eu amet dis mauris mi nulla ut. Non accusamus etiam pede non urna tempus,
    vestibulum aliquam tortor eget pharetra sodales, in vestibulum ut justo orci nulla, lobortis
    purus sem semper consectetuer magni purus. Dolor a leo vestibulum amet ut sit, arcu ut eaque
    urna fusce aliquet turpis, sed fermentum sed vestibulum nisl pede, tristique enim lorem posuere
    in laborum ut. Vestibulum id id justo leo nulla, magna lobortis ullamcorper et dignissim
    pellentesque, duis suspendisse quis id lorem ante. Vivamus a nullam ante adipiscing amet, mi vel
    consectetuer nunc aenean pede quisque, eget rhoncus dis porttitor habitant nunc vivamus, duis
    cubilia blandit non donec justo dictumst, praesent vitae nulla nam pulvinar urna. Adipiscing
    adipiscing justo urna pulvinar imperdiet nullam, vitae fusce rhoncus proin nonummy suscipit,
    ullamcorper amet et non potenti platea ultrices, mauris nullam sapien nunc justo vel, eu semper
    pellentesque arcu fusce augue. Malesuada mauris nibh sit a a scelerisque, velit sem lectus
    tellus convallis consectetuer, ultricies auctor a ante eros amet sed.\n\n
    Risus lacus duis leo platea wisi, felis maecenas rutrum in id in donec, non id a potenti libero
    eget, posuere elit ea sed pellentesque quis. Sunt lacus urna lorem elit duis, nibh donec purus
    quisque consectetuer dolor, neque vestibulum proin ornare eros nonummy phasellus. Iaculis cras
    eu at egestas dolor montes, viverra quisque malesuada consectetuer semper maecenas, a sed vitae
    donec tempor aliqua metus, ornare mollis suscipit et erat fusce, sit orci aut auctor elementum
    fames aliquam. Platea dui integer magnis non metus, minus dignissimos ante massa nostra et,
    rutrum sapien egestas quis sapien donec donec. Erat sit a eros aenean natoque, quam libero id
    lorem enim proin, lorem ipsum fermentum mattis metus et. Aliquam aliquet suscipit purus conubia
    at neque, platea vivamus vestibulum nulla quibusdam senectus, et morbi lectus malesuada gravida
    donec, elementum sit convallis pellentesque velit amet. Et eveniet viverra vehicula consectetuer
    justo, provident sed commodo non lacinia velit, tempor phasellus vel leo nisl cras, vivamus et
    arcu interdum dui eu amet. Volutpat wisi rhoncus vel turpis diam quibusdam, dapibus elit est
    quisque cubilia mauris, nulla elit magna tempor accumsan bibendum, lorem varius sed interdum
    eget mattis, scelerisque egestas feugiat donec dui molestie. Leo facilisis nisl sit montes
    ligula sed, enim commodo consectetuer nunc est et, ut sed vehicula dolor luctus elit. Fermentum
    cras donec eget nibh est vel, sed justo risus et pharetra diam, eu vivamus egestas ligula risus
    diam, sed justo eget hac ut mauris. Vestibulum diam nec vitae mi eget suspendisse, aenean arcu
    purus facilisis purus class in, id aliquam sit id scelerisque sapien etiam. Ut nullam sit sed at
    mauris lobortis, consequat dolor autem ipsum euismod nulla, elit quis proin eget conubia varius,
    erat arcu massa mus in mauris, scelerisque ut eu sollicitudin libero leo urna.\n\n
    Consectetuer luctus tempor elit ut dolor ligula, quis dui per dui hendrerit ante sagittis, in
    quisque pretium in eleifend enim. Condimentum iaculis vitae feugiat dis tellus vel, lectus dolor
    nec dui nulla nascetur, et pellentesque curabitur lorem leo velit eget. Id nascetur arcu
    lobortis suspendisse imperdiet urna, natoque nascetur ante in porta a, interdum hendrerit mi
    bibendum platea tellus, urna in enim ornare vestibulum faucibus enim. Leo fusce egestas ante nec
    volutpat, in tempor vel facilisis potenti ut, pede at non lorem a commodo, nulla dolor orci
    interdum vestibulum nulla. Dui nulla vestibulum quisque a pharetra porta, integer nec ipsum</string>
    <string name="title_activity_paper">PaperActivity</string>
    <string name="title_activity_floor_guide">FloorGuide</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_travel">TravelAdvisorActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_sponsor">SponsorActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="title_activity_im">IMActivity</string>
    <string name="text_ack_msg">Read</string>
    <string name="text_delivered_msg">Delivered</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="button_pushtotalk">Hold to talk</string>
    <string name="button_send">Send</string>
    <string name="attach_smile">Emoticon</string>
    <string name="attach_picture">Image</string>
    <string name="attach_take_pic">Capture</string>
    <string name="attach_location">Location</string>
    <string name="attach_video">Video</string>
    <string name="attach_file">File</string>
    <string name="attach_voice_call">Voice call</string>
    <string name="attach_video_call">Video call</string>
    <string name="user_card">Business card</string>
    <string name="move_up_to_cancel">Finger up to cancel sending</string>
    <string name="release_to_cancel">Finger release to cancel sending</string>
    <string name="send_fail">Send failed</string>
    <string name="delete_message">Delete message</string>
    <string name="delete_conversation_messages">Delete conversation and messages</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="copy_message">Copy message</string>
    <string name="delete_voice">Delete voice</string>
    <string name="delete_video">Delete video</string>
    <string name="delete">Delete</string>
    <string name="resend">Resend</string>
    <string name="confirm_resend">Confirm to resend？</string>
    <string name="connect_failuer_toast">Please check the network or try again later</string>
    <string name="network_unavailable">The network connection is not available, please check the network</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="button_logout">Logout</string>
    <string name="button_uploadlog">Upload the log</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="prompt">Prompt</string>
    <string name="clear_records">Clear conversation?</string>
    <string name="clear_all_records">Clear all conversations？</string>
    <string name="location_recv">[%1$s location]</string>
    <string name="location_message">The location information</string>
    <string name="recording_video">Record video</string>
    <string name="location_prefix">[my location]</string>
    <string name="voice">Voice</string>
    <string name="picture">[Picture]</string>
    <string name="video">[Video]</string>
    <string name="file">[file]</string>
    <string name="voice_call">[Voice call]</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_search">Find</string>
    <string name="button_add">Add</string>
    <string name="search_header">Search</string>
    <string name="network_isnot_available">The network is not available</string>
    <string name="recoding_fail">The recording failure, please try again！</string>
    <string name="select_contacts">Select the contact</string>
    <string name="confirm_forward_to">Confirm to forward to：%1$s ?</string>
    <string name="logout">Logout</string>
    <string name="logout_hint">Logout will never clear the chat history, this account can be used on next login</string>
    <string name="exit_group_hint">The group messages will not be received after exiting the group</string>
    <string name="dissolution_group_hint">The group will be dismissed after exiting</string>
    <string name="exit_group">Exit</string>
    <string name="connect_conflict">The same account was loggedin in other device</string>
    <string name="em_user_remove">This user has been removed</string>
    <string name="set">Settings</string>
    <string name="notify">New message notification</string>
    <string name="newnotify">Receiving a new message</string>
    <string name="shake">Shake</string>
    <string name="chatset">Chat settings</string>
    <string name="yangshengqi">Use speaker</string>
    <string name="todo_prompt">Enter todo details:</string>
    <string name="share_profile_key">share_profile</string>
    <string name="share_profile_title">Share Profile</string>
    <string name="share_profile_summary">Switch whether to share your profiles with other attendees</string>
    <string name="appointment_key">appointment_status</string>
    <string name="appointment_title">Notify Appointments</string>
    <string name="appointment_summary">Check if want to be notified about appointment changes</string>
    <string name="message_key">message_status</string>
    <string name="message_title">Messaging</string>
    <string name="message_summary">Check if want to enable messaging notification</string>
    <string name="calendar_key">sync_calendar</string>
    <string name="calendar_title">Sync Calendar</string>
    <string name="calendar_summary">Sync your schedule with device calendar</string>
</resources>